# github-repository-popularity-predictor

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
models/: feature_columns.pkl  label_encoders.pkl  lasso_regression.pkl  linear_regression.pkl  model_metadata.pkl  ridge_regression.pkl  scaler.pkl  xgboost.pkl
notebooks/: 01_eda.ipynb  02_preprocessing_and_modeling.ipynb
