[project]
name = "github-repository-popularity-predictor"
version = "0.1.0"
description = "GitHub Repository Popularity Predictor - ML model predicting repository popularity metrics"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    "scikit-learn>=1.3.0",
    "xgboost>=1.7.0",
    "streamlit>=1.28.0",
    "joblib>=1.3.0",
    "python-dateutil>=2.8.0",
]
